--- a/src/index.css
+++ b/src/index.css
@@ -2,12 +2,6 @@
   margin: 20px 0px;
 }
 
-td, th {
-  text-align: center;
-  vertical-align: middle !important;
-}
-
-svg {
-  height: 120px;
-  width: 180px;
+form .btn, form a {
+  margin-left: 10px;
 }
